--- a/sass/layouts/_navigation.scss
+++ b/sass/layouts/_navigation.scss
@@ -10,6 +10,7 @@
   &__checkbox:checked~&__nav {
     width: 100%;
     opacity: 1;
+    visibility: visible;
   }
 
   &__checkbox:checked+&__button &__icon {
@@ -61,6 +62,7 @@
     z-index: 1500;
 
     opacity: 0;
+    visibility: hidden;
     width: 0%;
     transition: all 0.8s cubic-bezier(0.68, -0.6, 0.32, 1.6);
   }
